--- a/administracao/templates/registration/password_reset_confirm.html
+++ b/administracao/templates/registration/password_reset_confirm.html
@@ -1,23 +1,27 @@
-{% extends 'base.html' %}
+{% extends 'adminlte/login.html' %}
 {% load bootstrap4 %}
 
-{% block content %}
+{% block logo %}
+<div class="login-logo">
+    <a>{% block logo_text %}<b>e</b>diaristas{% endblock logo_text %}</a>
+</div>
+{% endblock logo %}
+
+{% block login_form %}
+{% if validlink %}
 <div class="card card-primary">
     <div class="card-header">
         <div class="card-title">
-            {% if request.resolver_match.url_name == cadastrar_usuario %}
-                Cadastro de usuário
-            {% else %}
-                Edição de usuário
-            {% endif %}
+                Criar nova senha
         </div>
     </div>
     <div class="card-body">
         <form method="POST">
             {% csrf_token %}
-            {% bootstrap_form form_usuario %}
+            {% bootstrap_form form %}
             <button class="btn btn-primary" type="submit">Salvar</button>
         </form>
     </div>
 </div>
-{% endblock content %}
+{% endif %}
+{% endblock login_form %}
